reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_with_required_field-2.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "super :: into_typescript_code :: < TestStructWithRequiredField > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:
//

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    inout_test: (
      input: reflectapi_demo.tests.basic.input.TestStructWithRequiredField,
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<
      reflectapi_demo.tests.basic.output.TestStructWithRequiredField,
      {}
    >;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace basic {
      export namespace input {
        export interface TestStructWithRequiredField {
          required_with_default: number /* u8 */;
          required_without_default?: number /* u8 */;
        }
      }

      export namespace output {
        export interface TestStructWithRequiredField {
          required_with_default: number /* u8 */;
          required_without_default: number /* u8 */;
        }
      }
    }
  }
}

namespace __implementation {

  function inout_test(client: Client) {
    return (
      input: reflectapi_demo.tests.basic.input.TestStructWithRequiredField,
      headers: {},
      options?: RequestOptions,
    ) =>
      __request<
        reflectapi_demo.tests.basic.input.TestStructWithRequiredField,
        {},
        reflectapi_demo.tests.basic.output.TestStructWithRequiredField,
        {}
      >(client, "/inout_test", input, headers, options);
  }
}
