reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_with_required_field-4.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.1.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.basic.input.TestStructWithRequiredField"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.basic.output.TestStructWithRequiredField"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.basic.input.TestStructWithRequiredField": {
        "type": "object",
        "title": "reflectapi_demo.tests.basic.input.TestStructWithRequiredField",
        "required": [
          "required_with_default"
        ],
        "properties": {
          "required_with_default": {
            "$ref": "#/components/schemas/u8"
          },
          "required_without_default": {
            "$ref": "#/components/schemas/u8"
          }
        }
      },
      "reflectapi_demo.tests.basic.output.TestStructWithRequiredField": {
        "type": "object",
        "title": "reflectapi_demo.tests.basic.output.TestStructWithRequiredField",
        "required": [
          "required_with_default",
          "required_without_default"
        ],
        "properties": {
          "required_with_default": {
            "$ref": "#/components/schemas/u8"
          },
          "required_without_default": {
            "$ref": "#/components/schemas/u8"
          }
        }
      },
      "u8": {
        "description": "8-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
