reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_with_required_field-5.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "super :: into_python_code :: < TestStructWithRequiredField > ()"
---
'''
Generated Python client for api_client.

DO NOT MODIFY THIS FILE MANUALLY.
This file is automatically generated by ReflectAPI.
'''

from __future__ import annotations


# Standard library imports
from typing import Annotated, Any, Generic, Optional, TypeVar, Union

# Third-party imports
from pydantic import BaseModel, ConfigDict

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible
from reflectapi_runtime.testing import MockClient, create_api_response


class ReflectapiDemoTestsBasicInputTestStructWithRequiredField(BaseModel):
    """Generated data model."""

    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    required_with_default: int
    required_without_default: int | None = None


class ReflectapiDemoTestsBasicOutputTestStructWithRequiredField(BaseModel):
    """Generated data model."""

    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    required_with_default: int
    required_without_default: int


class AsyncInoutClient:
    """Async client for inout operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client


    async def test(
        self,
        data: Optional[ReflectapiDemoTestsBasicInputTestStructWithRequiredField] = None,
    ) -> ApiResponse[ReflectapiDemoTestsBasicOutputTestStructWithRequiredField]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[ReflectapiDemoTestsBasicOutputTestStructWithRequiredField]: Response containing ReflectapiDemoTestsBasicOutputTestStructWithRequiredField data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            "POST",
            path,
            params=params if params else None,
            json_model=data,
            response_model=ReflectapiDemoTestsBasicOutputTestStructWithRequiredField,
)


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = AsyncInoutClient(self)


class InoutClient:
    """Synchronous client for inout operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client


    def test(
        self,
        data: Optional[ReflectapiDemoTestsBasicInputTestStructWithRequiredField] = None,
    ) -> ApiResponse[ReflectapiDemoTestsBasicOutputTestStructWithRequiredField]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[ReflectapiDemoTestsBasicOutputTestStructWithRequiredField]: Response containing ReflectapiDemoTestsBasicOutputTestStructWithRequiredField data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return self._client._make_request(
            "POST",
            path,
            params=params if params else None,
            json_model=data,
            response_model=ReflectapiDemoTestsBasicOutputTestStructWithRequiredField,
)


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = InoutClient(self)


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
try:
    ReflectapiDemoTestsBasicInputTestStructWithRequiredField.model_rebuild()
    ReflectapiDemoTestsBasicOutputTestStructWithRequiredField.model_rebuild()
except AttributeError:
    # Some types may not have model_rebuild method
    pass

# Factory classes (generated after model rebuild to avoid forward references)

# Testing utilities


def create_reflectapidemotestsbasicinputteststructwithrequiredfield_response(value: ReflectapiDemoTestsBasicInputTestStructWithRequiredField) -> ApiResponse[ReflectapiDemoTestsBasicInputTestStructWithRequiredField]:
    """Create a mock ApiResponse for ReflectapiDemoTestsBasicInputTestStructWithRequiredField."""
    return create_api_response(value)


def create_reflectapidemotestsbasicoutputteststructwithrequiredfield_response(value: ReflectapiDemoTestsBasicOutputTestStructWithRequiredField) -> ApiResponse[ReflectapiDemoTestsBasicOutputTestStructWithRequiredField]:
    """Create a mock ApiResponse for ReflectapiDemoTestsBasicOutputTestStructWithRequiredField."""
    return create_api_response(value)


def create_mock_client() -> MockClient:
    """Create a mock client for testing."""
    return MockClient()
