reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_with_self_via_arc-4.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.basic.TestStructWithSelfViaArc"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.basic.TestStructWithSelfViaArc"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.basic.TestStructWithSelfViaArc": {
        "type": "object",
        "title": "reflectapi_demo.tests.basic.TestStructWithSelfViaArc",
        "required": [
          "_f"
        ],
        "properties": {
          "_f": {
            "$ref": "#/components/schemas/reflectapi_demo.tests.basic.TestStructWithSelfViaArc"
          }
        }
      }
    }
  }
}
